--- a/TeamBuilder/Views/Home/Index.cshtml
+++ b/TeamBuilder/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">مرحبا بكم</h1>
+
+   <img src="~/images/doctor.jpg" />
 </div>
+
+@if (1==0) {
+<p>Thi is p tag</p>
+}
