--- a/TeamBuilder/Views/Home/Privacy.cshtml
+++ b/TeamBuilder/Views/Home/Privacy.cshtml
@@ -3,4 +3,6 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p align="right">سياسة الخصوصية الخاصة بالموقع هي</p>
+
+<h3>اضغط هنا</h3>
